# PyBlastAfterglowMag

./: CMakeLists.txt  README.md
notebooks/: tophat_jet.ipynb
notebooks/grb_afterglow/: gauss_jet.ipynb  tophat_jet.ipynb
package/: instal.txt  requirements.txt  setup.py
ppr/: id_maker_from_thc_ourflow.py
projects/grb_prj/: grb_tst_tools.py  main.py  plot_example_skymaps.py
projects/grbgauss_mcmc/: parallel_sampler.py
projects/grbtophat_parallel/: parallel_run.py  parfile.par
projects/knafg_kenta/: ejecta.py  ejecta_analysis.ipynb  experiment.py  fitting.py  grid_explore.py  lc_analysis_0.ipynb  main.py  paths.py  settings.py  stat_analysis0.py
src/: CMakeLists.txt  Logger.h  Makefile  base_equations.h  blastwave.h  blastwave_base.h  blastwave_components.h  blastwave_dyn.h  blastwave_rad.h  blastwave_set.h  blastwave_set2.h  compile.txt  composition.h  eats.h  ejecta_combined.h  ejecta_grb.h  ejecta_kn.h  ejecta_radiation.h  image.h  initial_data.h  interpolators.h  logger.h  magnetar.h  main.cfg  main.cpp  model.h  model_cumshell.h  model_ejecta.h  model_evolve.h  model_magnetar.h  observer.h  ode_solvers.h  pch.h  pulsar_wind_nebula.h  radiation.h  rootfinders.h  ssc.h  synchrotron_an.h  utils.h
src/blastwave/: blastwave.h  blastwave_base.h  blastwave_collision.h  blastwave_components.h  blastwave_pars.h  blastwave_radiation.h
src/ejecta/: ejecta.h  ejecta_base.h  ejecta_cumshell.h  ejecta_id.h
src/microphysics/: analytic_models.h  base_state.h  common.h  kernels.h  microphysics.h  microphysics_base.h  numeric_model.h  radiation.h  (+1 more)
tst/: main.py
(+246 files in other folders)
